<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordered_layout_orange"
            android:orientation="vertical">

            <TextView
                android:id="@+id/productTitle"
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/name_of_product"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/prductBrand"
                style="@style/SmallTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/product_brand"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:maxWidth="300dp" />

            <TextView
                android:id="@+id/prductDescription"
                style="@style/Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/product_desription"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/prductPrice"
                style="@style/Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/product_price"
                android:textColor="@color/yellow" />

            <LinearLayout
                android:id="@+id/addToCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:background="@drawable/background_with_curved_edge"
                android:gravity="center">

                <TextView
                    android:id="@+id/addOrRemove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_margin"
                    android:text="@string/add_to_cart"
                    android:textColor="@color/yellow"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <FrameLayout
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginRight="@dimen/default_margin"
                    android:background="?attr/selectableItemBackgroundBorderless">

                    <ImageView
                        android:id="@+id/addOrRemoveImage"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:src="@drawable/add_to_cart_icon" />

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>